
=== Keyboard Shortcuts
- Removed the default binding for the `Show Active REPL View` command since it does not work well with German keyboard (prevents from typing @)

== Counterclockwise 0.33.0

`0.33.0` released on August 5, 2015

=== Editor
- double-click when in code now does the same as if the user had triggered the `Expand Selection Right` command. The net result is that you can select entire forms by double clicking on their start character ; you can also select entire symbols even if there are hypens inside, etc. Fixes #516

=== Process Launcher
- Fix an issue on OS X to preventively fix the PATH environement variable which is generally not even set with `/usr/local/bin` included. Fixes #709
- Launching a new REPL now works similarly from within an editor or from the contextual menu of a clojure file: the editor content or file content is loaded, and the REPL switches to the corresponding namespace. Fixes #833

=== Preferences
- Fix spurious exceptions thrown after having changed text color preferences


== Counterclockwise 0.32.0

`0.32.0` released on July 29, 2015

- Note that Counterclockwise drops Eclipse 3.x support, and now only supports Eclipse 4
- This release upgrades the embedded Leiningen from 2.5.0 to 2.5.1.

=== Support of Clojure 1.7.0
- Fix bug preventing to go to symbol declaration (upgrade of `ccw.server` version to `0.2.0`)
- Preference to revert printing of namespaces and exceptions in the REPL to the 1.6.0 behavior

=== Support for cider-nrepl in the REPL

==== cider-nrepl and Clojure projects

`cider-nrepl` ( https://github.com/clojure-emacs/cider-nrepl ) is a community effort to provide editor-agnostic nREPL middlewares. +
CCW is now able to use `cider-nrepl` middlewares for providing the same features available in the `ccw.server` lib, though not all features of `cider-nrepl` are exposed by CCW yet.

- There is a Clojure Preference menu:Preferences[Clojure > General > Launch REPLs with cider-nrepl] that is turned on by default.